--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -1,4 +1,12 @@
 /* 全局通用样式类 */
+/**
+  * vconsole隐藏
+  */
+#__vconsole {
+  display: none;
+}
+
+/* 示例样式 */
 .app-wrapper {
   width: 92%;
   margin: 0 auto;
@@ -7,33 +15,34 @@
   display: flex;
 }
 .title {
-  line-height: 40px;
-  font-size: 16px;
+  line-height: 0.6rem;
+  font-size: .28rem;
 }
 .btn {
   display: inline-block;
-  line-height: 35px;
-  padding: 0 20px;
+  line-height: .7rem;
+  padding: 0 .4rem;
   background: #0e8ce8;
   color: #fff;
   text-align: center;
-  font-size: 14px;
+  font-size: .28rem;
   text-decoration: none;
-  border-radius: 8px;
-  margin-right: 10px;
+  border-radius: .16rem;
+  margin-right: .1rem;
 }
 .header {
   width: 100%;
-  height: 40px;
-  line-height: 40px;
+  height: .8rem;
+  line-height: .8rem;
   color: #fff;
-  font-size: 16px;
+  font-size: .32rem;
   background: #0e8ce8;
   text-align: center;
 }
 .count {
-  width: 100%;
-  line-height: 50px;
-  font-size: 16px;
+  display: inline-block;
+  line-height: 0.8rem;
+  font-size: .28rem;
   color: gray;
+  margin-right: .2rem;
 }
